# sqs_worker

./: Cargo.toml  README.md
examples/: simple.rs  with_creds.rs  with_creds_from_env.rs
src/: client.rs  lib.rs
