[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
description = "An easy to use listener, to listen for messages from SQS queues"
documentation = "https://docs.rs/sqs_listener"
edition = "2018"
homepage = "https://github.com/avencera/sqs_listener"
license = "Apache-2.0"
name = "sqs_listener"
repository = "https://github.com/avencera/sqs_listener"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
async-trait = "0.1.64"
tokio = {version = "1.25.0", features = ["full"]}

# actor framework
act-zero = {version = "0.4", features = ["default-tokio"]}

# error handling
thiserror = "1.0.38"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# logging
log = {version = "0.4", features = ["serde"]}

# utils
derive_builder = "0.12.0"

# aws sqs

aws-sdk-sqs = "0.24.0"
aws-credential-types = "0.54.1"
aws-types = "0.54.1"


aws-smithy-http = "0.54.3"
aws-sdk-config = "0.24.0"
aws-config = "0.54.1"

# for examples

color-eyre = "0.6.2"
env_logger = "0.10.0"
eyre = "0.6"

actix = "0.13.0"
clokwerk = "0.4.0"
aws-smithy-async = "0.54.1"
aws-smithy-client = "0.54.4"
aws-http = "0.54.1"



aws-smithy-types = "0.54.1"
http = "0.2.8"
bytes = "1.4.0"
aws-smithy-xml = "0.54.1"
aws-endpoint = "0.54.1"
zeroize = "1.5.7"
aws-sdk-accessanalyzer = "0.24.0"
pretty_assertions = "1.3.0"
aws-smithy-protocol-test = "0.54.2"
aws-smithy-json = "0.54.2"
regex = "1.7.1"
tokio-stream = "0.1.11"
aws-smithy-query = "0.54.2"
aws-sig-auth = "0.54.1"
tower = "0.4.13"
aws-smithy-http-tower = "0.54.2"
dotenv = "0.15.0"
chrono = "0.4.23"
time = "0.3.19"
futures = "0.3.26"










