[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
description = "An easy to use listener, to listen for messages from SQS queues"
documentation = "https://docs.rs/sqs_listener"
edition = "2018"
homepage = "https://github.com/avencera/sqs_listener"
license = "Apache-2.0"
name = "sqs_listener"
repository = "https://github.com/avencera/sqs_listener"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
async-trait = "0.1.64"
tokio = {version = "1.25.0", features = ["rt-multi-thread", "macros"]}

# actor framework
act-zero = {version = "0.4", features = ["default-tokio"]}

# error handling
thiserror = "1.0.38"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# logging
log = {version = "0.4", features = ["serde"]}

# utils
derive_builder = "0.12.0"

# aws sqs
aws-sdk-sqs = "0.24.0"
aws-types = "0.54.1"
aws-smithy-http = "0.54.3"
aws-sdk-config = "0.24.0"
aws-config = "0.54.1"
aws-credential-types = "0.54.1"

# for examples
env_logger = "0.10.0"
eyre = "0.6"
color-eyre = "0.6.2"


