[package]
authors = ["Landeed <sumanmandava@landeed.com>"]
description = "A simple listener for message in a queue using AWS-SDK for Rust"
documentation = "https://docs.rs/sqs_worker/0.1.0/sqs_worker/"
edition = "2021"
homepage = "https://github.com/Landeed/sqs_worker"
license = "Apache-2.0"
name = "sqs_worker"
repository = "https://github.com/Landeed/sqs_worker"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
async-trait = "0.1.64"
tokio = {version = "1.25.0", features = ["rt-multi-thread", "macros"]}

# actor framework
act-zero = {version = "0.4", features = ["default-tokio"]}

# error handling
thiserror = "1.0.38"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# logging
log = {version = "0.4", features = ["serde"]}

# utils
derive_builder = "0.12.0"

# aws sqs
aws-sdk-sqs = "0.24.0"
aws-types = "0.54.1"
aws-smithy-http = "0.54.3"
aws-sdk-config = "0.24.0"
aws-config = "0.54.1"
aws-credential-types = "0.54.1"

# for examples
env_logger = "0.10.0"
eyre = "0.6"
color-eyre = "0.6.2"

